private_server/guard/CELL-41/Q-32/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-41/Q-32/41-32.py", line 4
    print now
            ^
SyntaxError: Missing parentheses in call to 'print'
